--- a/openacademy/view/openacademy_course_view.xml
+++ b/openacademy/view/openacademy_course_view.xml
@@ -9,12 +9,21 @@
                     <sheet>
                         <group>
                             <field name="name"/>
-                            <field name="description"/>
                         </group>
+                        <notebook>    
+                            <page string="Description">
+                                <field name="description"/>
+                            </page>
+                            <page string="About">
+                                This is all About
+                            </page>
+                        </notebook>
                     </sheet>
                 </form>
             </field>
         </record>
+
+        <!-- Views -->
         <record model="ir.actions.act_window" id="course_list_action">
             <field name="name">Courses</field>
             <field name="res_model">openacademy.course</field>
@@ -25,10 +34,36 @@
                 </p>
             </field>
         </record>
+
+        <!-- Actions, menus -->
         <menuitem id="main_openacademy_menu" name="Open Academy"/>
         <menuitem id="openacademy_menu" name="Open Academy"
                 parent="main_openacademy_menu"/>
         <menuitem id="courses_menu" name="Courses" parent="openacademy_menu"
                 action="course_list_action"/>
+
+        <!-- search behavior for openacademy.course -->
+        <record model="ir.ui.view" id="course_search_view">
+            <field name="name">course.search.view</field>
+            <field name="model">openacademy.course</field>
+            <field name="arch" type="xml">
+                <search>
+                    <field name="name"></field>
+                    <field name="description"></field>
+                </search>
+            </field>
+        </record>
+
+        <!-- search behavior for openacademy.course -->
+        <record model="ir.ui.view" id="course_tree_view">
+            <field name="name">course.tree.view</field>
+            <field name="model">openacademy.course</field>
+            <field name="arch" type="xml">
+                <tree>
+                    <field name="name"></field>
+                    <field name="description"></field>
+                </tree>
+            </field>
+        </record>
     </data>
 </openerp>
