--- a/openacademy/view/openacademy_course_view.xml
+++ b/openacademy/view/openacademy_course_view.xml
@@ -9,6 +9,7 @@
                     <sheet>
                         <group>
                             <field name="name"/>
+                            <field name="responsible_id"/>
                         </group>
                         <notebook>
                             <page string="Description">
@@ -16,6 +17,14 @@
                             </page>
                             <page string="About">
                                 This is all About
+                            </page>
+                            <page string="Sessions">
+                                <field name="session_ids">
+                                    <tree name="Registered sessions">
+                                        <field name="name"></field>
+                                        <field name="instructor_id"></field>
+                                    </tree>
+                                </field>
                             </page>
                         </notebook>
                     </sheet>
@@ -61,7 +70,7 @@
             <field name="arch" type="xml">
                 <tree>
                     <field name="name"></field>
-                    <field name="description"></field>
+                    <field name="responsible_id"></field>
                 </tree>
             </field>
         </record>
