--- a/openacademy/view/openacademy_session_view.xml
+++ b/openacademy/view/openacademy_session_view.xml
@@ -7,14 +7,31 @@
             <field name="arch" type="xml">
                 <form string="Session Form">
                     <sheet>
-                        <group>
-                            <field name="name"/>
+                        <group string="General">
+                            <field name="course_id"></field>
+                            <field name="name"></field>
+                            <field name="instructor_id"></field>
+                        </group>
+                        <group string="Schedule">
                             <field name="start_date"></field>
                             <field name="duration"></field>
                             <field name="seats"></field>
                         </group>
+                        <label for='attendee_ids' />
+                        <field name="attendee_ids" />
                     </sheet>
                 </form>
+            </field>
+        </record>
+
+        <record model="ir.ui.view" id="session_tree_view">
+            <field name="name">session.tree</field>
+            <field name="model">openacademy.session</field>
+            <field name="arch" type="xml">
+                <tree string="Session tree">
+                    <field name="name"></field>
+                    <field name="course_id"></field>
+                </tree>
             </field>
         </record>
 
