[REF] openacademy: changed non-bad-hmtl tags and added computed values into sessions

--- a/openacademy/view/openacademy_course_view.xml
+++ b/openacademy/view/openacademy_course_view.xml
@@ -21,8 +21,8 @@
                             <page string="Sessions">
                                 <field name="session_ids">
                                     <tree name="Registered sessions">
-                                        <field name="name"></field>
-                                        <field name="instructor_id"></field>
+                                        <field name="name"/>
+                                        <field name="instructor_id"/>
                                     </tree>
                                 </field>
                             </page>
@@ -57,8 +57,8 @@
             <field name="model">openacademy.course</field>
             <field name="arch" type="xml">
                 <search>
-                    <field name="name"></field>
-                    <field name="description"></field>
+                    <field name="name"/>
+                    <field name="description"/>
                 </search>
             </field>
         </record>
@@ -69,8 +69,8 @@
             <field name="model">openacademy.course</field>
             <field name="arch" type="xml">
                 <tree>
-                    <field name="name"></field>
-                    <field name="responsible_id"></field>
+                    <field name="name"/>
+                    <field name="responsible_id"/>
                 </tree>
             </field>
         </record>
