[REF] openacademy: Added colouring based on duration

--- a/openacademy/view/openacademy_session_view.xml
+++ b/openacademy/view/openacademy_session_view.xml
@@ -30,9 +30,10 @@
             <field name="name">session.tree</field>
             <field name="model">openacademy.session</field>
             <field name="arch" type="xml">
-                <tree string="Session tree">
+                <tree string="Session tree" colors="blue:duration&lt;5;red:duration&gt;5">
                     <field name="name"/>
                     <field name="course_id"/>
+                    <field name="duration" invisible="1"/>
                     <field name="taken_seats" widget="progressbar"/>
                 </tree>
             </field>
