--- a/openacademy/view/openacademy_session_view.xml
+++ b/openacademy/view/openacademy_session_view.xml
@@ -27,7 +27,7 @@
         </record>
 
         <record model="ir.ui.view" id="session_tree_view">
-            <field name="name">session.tree</field>
+            <field name="name">session.tree.view</field>
             <field name="model">openacademy.session</field>
             <field name="arch" type="xml">
                 <tree string="Session tree" colors="blue:duration&lt;5;red:duration&gt;5">
@@ -39,11 +39,24 @@
             </field>
         </record>
 
+        <!-- calendar view -->
+        <record model="ir.ui.view" id="session_calendar_view">
+            <field name="name">session.calendar.view</field>
+            <field name="model">openacademy.session</field>
+            <field name="arch" type="xml">
+                <calendar string="Session Calendar" date_start="start_date"
+                          date_stop="end_date"
+                          color="instructor_id">
+                    <field name="name"/>
+                </calendar>
+            </field>
+        </record>
+
         <record model="ir.actions.act_window" id="session_list_action">
             <field name="name">Session</field>
             <field name="res_model">openacademy.session</field>
             <field name="view_type">form</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">tree,form,calendar</field>
         </record>
 
         <menuitem id="session_menu" name="Sessions"
