--- a/openacademy/view/openacademy_session_workflow.xml
+++ b/openacademy/view/openacademy_session_workflow.xml
@@ -47,5 +47,11 @@
             <field name="act_to" ref="activity_done"/>
             <field name="signal">done</field>
         </record>
+
+        <record model="workflow.transition" id="session_auto_confirm_half_filled">
+            <field name="act_from" ref="activity_draft"/>
+            <field name="act_to" ref="activity_confirmed"/>
+            <field name="condition">taken_seats &gt; 50</field>
+        </record>
     </data>
 </openerp>
